crates/bonsaidb-macros/tests/ui/view/missing_collection.rs
use bonsaidb::core::schema::View;

#[derive(View)]
#[view(key = ())]
struct Test;

fn main() {}
